syntax = "proto3";

package plugins;

import "ptypes/empty/empty.proto";

enum PluginCapability {
    CONNECTION = 0;
    DISCOVERY = 1;
    REGISTRY = 2;
}

message PluginInfo {
    string name = 1;
    string endpoint = 2;
    repeated PluginCapability capabilities = 3;
}

service PluginRegistry {
    rpc Register (PluginInfo) returns (google.protobuf.Empty);
}
